<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="iniciar">Iniciar Sesion</string>
    <string name="inicio">INICIO</string>
    <string name="registrarme">Registrarme</string>
    <string name="shoelab">SHOE LAB</string>
    <string name="res">Registro de Usuarios</string>
    <string name="sl">Shoe Lab</string>
    <string name="correo">Introduzca su correo</string>
    <string name="contra">cree su contraseña</string>
    <string name="nom">Introduzca su nombre</string>


</resources>