<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/adidas"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/res"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="162dp"
       android:layout_marginTop="39dp"
       android:layout_marginEnd="162dp"
       android:layout_marginBottom="650dp"
       android:text="@string/res"
       android:textColor="@color/black"
       android:background="@color/white"
       android:fontFamily="casual"
       android:textAllCaps="false"
       android:textSize="40sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0" />

   <TextView
       android:id="@+id/sl"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="162dp"
       android:layout_marginTop="105dp"
       android:layout_marginEnd="162dp"
       android:layout_marginBottom="650dp"
       android:layout_below="@+id/res"
       android:text="@string/sl"
       android:textColor="@color/black"
       android:background="@color/white"
       android:fontFamily="casual"
       android:textAllCaps="false"
       android:textSize="40sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0" />

   <EditText
       android:id="@+id/nom"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/res"
       android:layout_marginStart="162dp"
       android:layout_marginTop="295dp"
       android:layout_marginEnd="162dp"
       android:layout_marginBottom="650dp"
       android:background="@color/white"
       android:fontFamily="casual"
       android:hint="@string/nom"
       android:minHeight="48dp"
       android:textAllCaps="false"
       android:textColor="@color/black"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0" />

   <EditText
       android:id="@+id/correo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/res"
       android:layout_marginStart="162dp"
       android:layout_marginTop="355dp"
       android:layout_marginEnd="162dp"
       android:layout_marginBottom="650dp"
       android:background="@color/white"
       android:fontFamily="casual"
       android:hint="@string/correo"
       android:inputType="textEmailAddress"
       android:minHeight="48dp"
       android:textAllCaps="false"
       android:textColor="@color/white"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0" />

   <EditText
       android:id="@+id/contra"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/res"
       android:layout_marginStart="162dp"
       android:layout_marginTop="415dp"
       android:layout_marginEnd="162dp"
       android:layout_marginBottom="650dp"
       android:background="@color/white"
       android:fontFamily="casual"
       android:hint="@string/contra"
       android:inputType="textPassword"
       android:minHeight="48dp"
       android:textAllCaps="false"
       android:textColor="@color/white"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0" />

   <Button
       android:id="@+id/btnRegis"
       android:layout_width="166dp"
       android:layout_height="55dp"
       android:layout_marginBottom="50dp"
       android:text="Crear cuenta"
       android:backgroundTint="@color/white"
       android:textColor="@color/black"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintVertical_bias="0.087" />

</androidx.constraintlayout.widget.ConstraintLayout>
