<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="650dp"
        android:background="#009E2E2E"
        android:shadowColor="#40D7EA"
        android:text="@string/shoelab"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHighlight="@color/black"
        android:textColorHint="#CD1F1F"
        android:textColorLink="#F42F2F"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/nike_inicio"
        android:layout_width="411dp"
        android:layout_height="347dp"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        app:layout_constraintVertical_bias="0.878"
        app:srcCompat="@drawable/nike_inicio" />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="166dp"
        android:layout_height="55dp"
        android:layout_below="@+id/nike_inicio"
        android:text="@string/iniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nike_inicio"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/btnRegistar"
        android:layout_width="144dp"
        android:layout_height="39dp"
        android:layout_below="@+id/btnIniciar"
        android:text="@string/registrarme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nike_inicio"
        app:layout_constraintVertical_bias="0.423" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="298dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/celeste"
        android:buttonTint="#A82121"
        android:text="Switch"
        android:thumbTint="#49AEFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nike_inicio" />

</androidx.constraintlayout.widget.ConstraintLayout>